--- a/index.html
+++ b/index.html
@@ -20,13 +20,13 @@
       </div>
       </header>
       <section class="works">
-        <h1>ポートフォリオ </h1>
+        <h1>ポートフォリオ</h1>
 
         <section>
           <img src="img/dummy.jpg" width="400px" height="260px" alt="アプリの紹介写真です">
           <h1>トレーニング記録アプリ</h1>
           <p>プリズナートレーニング専用記録アプリです。ポールウェイドさんの著書で紹介されたトレーニング方法に基づいたトレーニング記録アプリです。日付、トレーニングの種類、回数を入力することで、項目がローカルストレージに記録されます。回数の合計を確認することもできます。</p>
-          <a href="">トレーニング記録アプリへ</a>
+          <a href="https://malcolmyz.github.io/prisoner-training/">トレーニング記録アプリへ</a>
         </section>
 
         <section>
