--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <header>
     <div class="container">
         <div class="icon">
-          <img src="img/360x360.png" width="120" heigth="120" alt="マルコムの画像です">
+          <img src="img/2021icon.png" width="120" heigth="120" alt="マルコムの画像です">
         </div>
         <div class="info">
           <h1>マルコム</h1>
@@ -30,7 +30,7 @@
         </section>
 
         <section>
-          <img src="img/dummy.jpg" width="400px" height="260px" alt="アプリの紹介写真です">
+          <img src="img/training.jpg" width="400px" height="260px" alt="アプリの紹介写真です">
           <h1>さんすうトレーニングアプリ</h1>
           <p>計算力を鍛えるアプリです。演算の種類、問題数、難易度を選択できるようになっています。問題を繰り返し解くことで計算力を鍛えます。</p>
           <a href="">さんすうトレーニングアプリへ</a>
