--- a/index.html
+++ b/index.html
@@ -23,14 +23,14 @@
         <h1>ポートフォリオ</h1>
 
         <section>
-          <img src="img/dummy.jpg" width="400px" height="260px" alt="アプリの紹介写真です">
+          <img src="img/training.jpg" width="400px" height="260px" alt="アプリの紹介写真です">
           <h1>トレーニング記録アプリ</h1>
           <p>プリズナートレーニング専用記録アプリです。ポールウェイドさんの著書で紹介されたトレーニング方法に基づいたトレーニング記録アプリです。日付、トレーニングの種類、回数を入力することで、項目がローカルストレージに記録されます。回数の合計を確認することもできます。</p>
           <a href="https://malcolmyz.github.io/prisoner-training/">トレーニング記録アプリへ</a>
         </section>
 
         <section>
-          <img src="img/training.jpg" width="400px" height="260px" alt="アプリの紹介写真です">
+          <img src="img/calculation.jpg" width="400px" height="260px" alt="アプリの紹介写真です">
           <h1>さんすうトレーニングアプリ</h1>
           <p>計算力を鍛えるアプリです。演算の種類、問題数、難易度を選択できるようになっています。問題を繰り返し解くことで計算力を鍛えます。</p>
           <a href="">さんすうトレーニングアプリへ</a>
